NDI-9: Fix table and spacing glitches in event pages

--- a/scss/civicrm/contact/pages/_events.scss
+++ b/scss/civicrm/contact/pages/_events.scss
@@ -134,6 +134,7 @@
         .crm-absolute-date-range > span,
         .crm-absolute-date-range > span > input {
           display: inline-block;
+          margin-top: 5px;
           vertical-align: middle;
         }
       }
